--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,20 +8,29 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
-    padding: 10px;
+header { /*This header element  has been refactored so there arent so many header classes*/
+    padding: 10px; 
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    width: 100%;
+    font-size: 20px;  
 }
 
-.header h1 {
+ul{
+    list-style-type: none; 
+    display: inline-block;
+    margin-left: 25px;
+}
+
+li{
+    display: inline-block;
+    margin-left: 25px;
+}
+
+h1 {
     display: inline-block;
     font-size: 48px;
-}
-
-.header h1 .seo {
-    color: #d9dcd6;
 }
 
 .header div {
