--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -10,40 +11,39 @@ body {
 
 header { /*This header element  has been refactored so there arent so many header classes*/
     padding: 10px; 
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
     width: 100%;
-    font-size: 20px;  
+    
 }
 
 ul{
     list-style-type: none; 
     display: inline-block;
-    margin-left: 25px;
+    position:absolute;
+    margin:20px;
+    right:25px;
 }
 
 li{
-    display: inline-block;
-    margin-left: 25px;
+    display: inline;
+    margin:50px;
+    font-size: 30px;
 }
 
 h1 {
     display: inline-block;
-    font-size: 48px;
+    font-size: 60px;
 }
 
 .header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
+
 
 .header div ul li {
     display: inline-block;
