--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,11 +78,9 @@ p {
 
 
 .hero {
-    
     width:100%;
-   aspect-ratio: 1.5;
+    aspect-ratio: 1.5;
     margin-bottom: 25px;
-    
     background-size: cover;
     background-position: center;
 }
@@ -117,9 +115,21 @@ p {
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
+   
 }
 
-.benefit-brand {
+.benefit-lead h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-lead img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/*.benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -128,7 +138,6 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -160,7 +169,7 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+}*/
 
 .search-engine-optimization {
     margin-bottom: 20px;
