--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,8 @@ nav {/*replaced the div at the top that was handling the navbar inside the heade
 li{/*This li element handles the space and font size of the lists inside the ul at the top of the page*/
     display: inline;
     margin:50px;
-    
 }
-
+/* h1, h2 and h3 are all changing the headers on the page*/
 h1 {
     display: inline;
     font-size: 60px;
@@ -54,7 +53,6 @@ h3{
 }
 
 
-
 a {
     color: #ffffff;
     text-decoration: none;
@@ -65,7 +63,7 @@ p {
 }
 
 
-.hero {
+.hero { /*This class handles the big picture of the people meeting on the webpage*/
     width:100%;
     aspect-ratio: 1.5;
     margin-bottom: 25px;
@@ -73,6 +71,8 @@ p {
     background-position: center;
 }
 
+/*Float left and float right tell the images in the content panel weather to stay to the left 
+of the content or go to the right*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -83,13 +83,13 @@ p {
     margin-left: 25px;
 }
 
-.content {
+.content { /*This content class is a container for the benefits class*/
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+.benefits { /*This class is a container for all other aside cards*/
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -100,24 +100,24 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.aside-card { 
     margin-bottom: 32px;
     color: #ffffff;
    
 }
 
-.benefit-lead h3 {
+.aside-card h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
+.aside-card img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.card { 
+.card { /*This card class is responsible for all the subsections of the content class*/
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -177,8 +177,7 @@ p {
     max-width: 150px;
 }*/
 
-/*This class handles the cards for the section about search engine optimization
-online reputation management and social media marketing*/
+
 
 
 /* Refactored this code into 3 .card classes
